--- a/contactStylesheet.css
+++ b/contactStylesheet.css
@@ -84,7 +84,7 @@ body{
 }
 
 .navbuttons:hover{
-    background-color: #d4d4d4;
+    background-color: #f0f0f0;
     color: black;
 
 }
@@ -104,6 +104,7 @@ body{
 #yt{
     width:50px;
     height: 50px;
+    
 }
 
 
@@ -122,7 +123,7 @@ body{
 #main {
     width: 100%;
     margin-top: -30px;
-    Height: 1800px;
+    Height: 600px;
     background-color:rgba(0, 0, 0, 0.83);
 }
     
@@ -131,7 +132,7 @@ body{
     margin-left: 15%;
     margin-right: 15%;
     background-color: rgba(0, 0, 0, 0.62);
-    height:1500px;
+    height:500px;
 }
 
 #header{
@@ -143,37 +144,14 @@ body{
 
 
 #mainContent p{
-   text-align: justify;
-    float: left;
-    width: 66.66%;
-    padding-right: 2%;
+    text-align: justify;
+    padding-left: 15%;
+    padding-right: 15%;
+    font-size: 18px;
+    line-height: 25px;
 }
 
-#eliotElectricBass{
-    width: 29%;
-    float: left;
-    clear: right;
-}
 
-#eliotBrokenString{
-    float: left;
-    width: 29%;
-    margin-top:60px;
-}
-
-#p1{
-    float: left;
-    width: 40%;
-}
-
-#p2{
-    margin-top: -230px;
-    clear: both;
-}
-
-#p3{
-    margin-top: -250px;
-}
 
 .FirstLetters{ 
     
@@ -191,7 +169,7 @@ body{
 #emailForm{
     text-align: center;
     align-content: center;
-    width 150px;
+    
     height 250px;
 }
 
@@ -203,7 +181,8 @@ button{
     width: 60px;
 }
 
-#messagebox{
+.textInput{
+    background-color: #d9d9d9;
    
 }
 
@@ -250,17 +229,11 @@ button{
 /*FOOTER*/
 
 footer{
-    height: 50px;
-    width: 100%;
+    
     clear: both;
     text-align:center;
-     background: -webkit-linear-gradient(left, black , #535353); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(left, #535353, black); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(left, #535353, black); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(to left, #535353 , black); /* Standard syntax (must be last) */
-    
+     background-color: transparent;
+    font-size: 30px;
+    margin-top: inherit;
 }
 
-footer h2{
-    padding-top: 10px;
-}
