--- a/ejsStylesheet.css
+++ b/ejsStylesheet.css
@@ -1,11 +1,53 @@
-html{
-    color: white;   
-}
+/*=======================*/
+/*     MOBILE STYLES     */
+/*=======================*/
 
-body{
-    box-sizing:border-box;    
-    font-family: helvetica;  
-    background-image: url(http://cdn.mysitemyway.com/etc-mysitemyway/webtreats/assets/posts/725/full/tileable-starfield-patterns-5.jpg);
+
+
+@media screen and (max-width: 600px) and (min-width: 0px){
+    
+    #logo{
+        display: none;
+        
+        padding-right: 0%;
+    }
+    
+    #ejs{
+        display: none;
+        
+    }
+    
+    .navwords{
+       font-size: 12px;
+    }
+    
+    .navbuttons{
+        width: 100%;
+        margin-right:20%;
+    }
+    
+    
+
+    .navbar{
+        width: 100%;  
+        margin: 0 auto;
+        height: 60px;
+    }
+
+    .vidcells{
+        width: 100%;
+        float: left;
+        
+    }
+    .vids{
+        width: 100%;
+        float: left;
+    }
+    
+    .socialmedia{
+        width: 0%;
+    }
+    
     
 }
 
@@ -15,22 +57,54 @@ body{
 
 
 
+/*===================*/
+/*     HTML/BODY     */
+/*===================*/
 
 
-/*NAVBAR SECTION*/
+
+
+
+html{
+    color: #dedede;   
+}
+
+body{ 
+    box-sizing:border-box;    
+    font-family: 'Abel', sans-serif;
+    background-color: black;
+}
+
+
+
+    
+ 
+
+
+
+
+
+
+
+
+/*============================*/
+/*       NAVBAR SECTION       */
+/*============================*/
+
 
 
 .navwrap{
     height: 100px;
-    
+    background-color: black;
     
 }
 
 #logo{
+    max-width: 100%;
     float:left;
-    height: 80px;
+    
     width:6%;
-    margin-top: -12px;
+    margin-top: -15px;
     padding-right: 4%;  
 }
 
@@ -42,19 +116,15 @@ body{
 }
 
 #home{
-    border-right: 1px solid white;
 }
 
-#bio{
-    border-right:1px solid white;
+#about{
 }
 
 #audio{
-    border-right: 1px solid white;
 }
 
 #video{
-    border-right: 1px solid white;
 }
 
 #contact{
@@ -69,25 +139,34 @@ body{
     color:#ffffff;
     width: 97%;
     height: 30px;
-    background: -webkit-linear-gradient(left, black , #535353); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(left, #535353, black); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(left, #535353, black); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(to left, #535353 , black); /* Standard syntax (must be last) */
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#010101+2,4e4e4e+52,0a0a0a+99&0.86+0,1+100 */
+background: -moz-linear-gradient(top, rgba(1,1,1,0.86) 0%, rgba(1,1,1,0.86) 2%, rgba(78,78,78,0.93) 52%, rgba(10,10,10,1) 99%, rgba(10,10,10,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(1,1,1,0.86)), color-stop(2%,rgba(1,1,1,0.86)), color-stop(52%,rgba(78,78,78,0.93)), color-stop(99%,rgba(10,10,10,1)), color-stop(100%,rgba(10,10,10,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top, rgba(1,1,1,0.86) 0%,rgba(1,1,1,0.86) 2%,rgba(78,78,78,0.93) 52%,rgba(10,10,10,1) 99%,rgba(10,10,10,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top, rgba(1,1,1,0.86) 0%,rgba(1,1,1,0.86) 2%,rgba(78,78,78,0.93) 52%,rgba(10,10,10,1) 99%,rgba(10,10,10,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top, rgba(1,1,1,0.86) 0%,rgba(1,1,1,0.86) 2%,rgba(78,78,78,0.93) 52%,rgba(10,10,10,1) 99%,rgba(10,10,10,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom, rgba(1,1,1,0.86) 0%,rgba(1,1,1,0.86) 2%,rgba(78,78,78,0.93) 52%,rgba(10,10,10,1) 99%,rgba(10,10,10,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#db010101', endColorstr='#0a0a0a',GradientType=0 ); /* IE6-9 */
 }
 
 .navbuttons{
     display: inline-block;
     float: left;
     text-align: center;
-    width: 15%;
-    font-size: 18px;  
+    width: 12.5%;
+    font-size: 14px;  
+    
 }
 
-.navbuttons:hover{
-    background-color: #d4d4d4;
-    color: black;
-
+a{
+    color: white;
 }
+
+
+a:hover{
+    color: #bababa;
+}
+
 
 .socialmedia{
     width:30px;
@@ -101,10 +180,6 @@ body{
     margin-top: 6px
 }
 
-#yt{
-    width:50px;
-    height: 50px;
-}
 
 
 
@@ -115,23 +190,38 @@ body{
 
 
 
+/*=====================*/
+/*     MAIN SECTION    */
+/*=====================*/
 
-/*MAIN SECTION STARTS HERE*/
 
 
 #main {
     width: 100%;
-    margin-top: -30px;
-    Height: 1800px;
-    background-color:rgba(0, 0, 0, 0.83);
+    margin-top: -30px;    
+    height: auto;
+}
+
+#name{
+    position: absolute;
+    text-align: center;
+    font-size: 40px;
+    
+    margin-left: 60%;
 }
     
+#upright{
+    width: 100%;
+    height: auto;
+    
+}
+ 
 #mainContent{
     
     margin-left: 15%;
     margin-right: 15%;
-    background-color: rgba(0, 0, 0, 0.62);
-    height:1500px;
+    
+    height:1870px;
 }
 
 #header{
@@ -142,41 +232,21 @@ body{
 
 
 
-#mainContent p{
-   text-align: justify;
-    float: left;
-    width: 66.66%;
-    padding-right: 2%;
+
+
+/*====================*/
+/*     Audio Page     */
+/*====================*/
+
+
+ul{
+    list-style-type: none;
 }
 
-#eliotElectricBass{
-    width: 29%;
-    float: left;
-    clear: right;
-}
 
-#eliotBrokenString{
-    float: left;
-    width: 29%;
-    margin-top:60px;
-}
-
-#p1{
-    float: left;
-    width: 40%;
-}
-
-#p2{
-    margin-top: -230px;
-    clear: both;
-}
-
-#p3{
-    margin-top: -250px;
-}
-
-.FirstLetters{ 
+#audioLink{
     
+
 }
 
 
@@ -186,7 +256,14 @@ body{
 
 
 
-/*EMAIL FORM*/
+
+/*====================*/
+/*     EMAIL FORM     */
+/*====================*/
+
+
+
+
 
 #emailForm{
     text-align: center;
@@ -217,18 +294,21 @@ button{
 
 
 
+ 
+
+/*================*/
+/*   VIDEO PAGE   */
+/*================*/
 
 
 
-/*VIDEO PAGE*/
 
 #vidTable{
     width: 100%;
-    
 }
 
 .vidCells{
-    width: 100;
+    
     height:300px;
 }
 
@@ -242,6 +322,95 @@ button{
 
 
 
+/*========================*/
+/*     PHOTOS SECTION     */
+/*========================*/
+
+
+
+.gallery{
+    width: 80%;
+    max-width: 100%;
+    
+    margin-top: 30px;
+}
+
+
+td{
+    height: 300px;
+    width: 33.33%;
+}
+
+
+
+
+
+
+
+
+
+/*=======================*/
+/*     ABOUT ARTICLE     */
+/*=======================*/
+
+
+
+
+.aboutParagraphs{
+    line-height: 23px;
+    text-align: justify;
+}
+
+#p1{
+    width: 90%;
+    float: left;
+    
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
+#ejsElectricBass{
+    width: 40%;
+    float: left;
+    clear: left;
+    padding: 0 5% 0 5%;
+    
+}
+
+#p2{
+    width: 40%;
+    float: left;
+    padding: 0 5% 0 5%;
+}
+
+#ejsBrokenString{
+    width: 40%;    
+    padding: 22px 5% 0 5%;
+    
+}
+
+#p3{
+    width: 40%;
+    padding: 0 5% 0 5%;
+    float: left;
+    margin-top: -200px;
+}
+
+#ejsUpright{
+    float: left;
+    padding-left: 5%;
+    width: 40%;
+    
+}
+#p4{
+    padding-left: 5%;
+    padding-right: 5%;
+    display: block;
+    width: 40%;
+    overflow: hidden;   
+    float: right;
+}
+
 
 
 
@@ -254,7 +423,7 @@ footer{
     width: 100%;
     clear: both;
     text-align:center;
-     background: -webkit-linear-gradient(left, black , #535353); /* For Safari 5.1 to 6.0 */
+    background: -webkit-linear-gradient(left, black , #535353); /* For Safari 5.1 to 6.0 */
     background: -o-linear-gradient(left, #535353, black); /* For Opera 11.1 to 12.0 */
     background: -moz-linear-gradient(left, #535353, black); /* For Firefox 3.6 to 15 */
     background: linear-gradient(to left, #535353 , black); /* Standard syntax (must be last) */
@@ -264,3 +433,6 @@ footer{
 footer h2{
     padding-top: 10px;
 }
+    
+    
+    
