--- a/contactStylesheet.css
+++ b/contactStylesheet.css
@@ -151,6 +151,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#db010101', e
 
 a{
     color: white;
+    text-decoration: none;
 }
 
 a:hover{
