--- a/contactStylesheet.css
+++ b/contactStylesheet.css
@@ -87,9 +87,11 @@ body{
 /*============================*/
 
 
+
+
 .navwrap{
     height: 100px;
-    
+    background-color: black;
     
 }
 
@@ -109,19 +111,26 @@ body{
 }
 
 #home{
+    
 }
 
 #bio{
+    
 }
 
 #audio{
+    
 }
 
 #video{
+    
 }
 
-#contact{    
+#contact{
+    
 }
+
+
 
 .navbar{
     margin-top:30px;
@@ -147,6 +156,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#db010101', e
     text-align: center;
     width: 12.5%;
     font-size: 14px;  
+    
 }
 
 a{
@@ -158,7 +168,6 @@ a:hover{
     color: #bababa;
 }
 
-
 .socialmedia{
     width:30px;
     display: inline-block;
@@ -168,16 +177,14 @@ a:hover{
 
 .navwords{
     background-color: transparent;
-    margin-top: 6px
+    margin-top: 6px;
+    font-size: 17px;
 }
 
 #yt{
     width:50px;
     height: 50px;
-    
 }
-
-
 
 
 
