--- a/contactStylesheet.css
+++ b/contactStylesheet.css
@@ -1,57 +1,3 @@
-/*=======================*/
-/*     MOBILE STYLES     */
-/*=======================*/
-
-
-
-@media screen and (max-width: 600px) and (min-width: 0px){
-    
-    #logo{
-        display: none;
-        
-        padding-right: 0%;
-    }
-    
-    #ejs{
-        display: none;
-        
-    }
-    
-    .navwords{
-       font-size: 12px;
-    }
-    
-    .navbuttons{
-        width: 100%;
-        margin-right:20%;
-    }
-    
-    
-
-    .navbar{
-        width: 100%;  
-        margin: 0 auto;
-        height: 60px;
-    }
-
-    .vidcells{
-        width: 100%;
-        float: left;
-        
-    }
-    .vids{
-        width: 100%;
-        float: left;
-    }
-    
-    .socialmedia{
-        width: 0%;
-    }
-    
-    
-}
-
-
 
 
 
@@ -103,34 +49,6 @@ body{
     padding-right: 4%;  
 }
 
-#ejs{
-    float:left;
-    font-size: 30px;
-   
-    display:inline-block;
-}
-
-#home{
-    
-}
-
-#bio{
-    
-}
-
-#audio{
-    
-}
-
-#video{
-    
-}
-
-#contact{
-    
-}
-
-
 
 .navbar{
     margin-top:30px;
@@ -155,8 +73,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#db010101', e
     float: left;
     text-align: center;
     width: 12.5%;
-    font-size: 14px;  
-    
+    font-size: 14px;    
 }
 
 a{
@@ -181,10 +98,7 @@ a:hover{
     font-size: 17px;
 }
 
-#yt{
-    width:50px;
-    height: 50px;
-}
+
 
 
 
@@ -204,6 +118,13 @@ a:hover{
     margin-top: -30px;    
 }
 
+.mainTitles{
+    text-align: center;
+    font-size: 40px;
+    line-height: 45px;
+    
+}
+
 #name{
     position: absolute;
     text-align: center;
@@ -221,8 +142,7 @@ a:hover{
 #mainContent{
     
     margin-left: 15%;
-    margin-right: 15%;
-    
+    margin-right: 15%;    
     height:1870px;
 }
 
@@ -246,8 +166,7 @@ a:hover{
 
 #emailForm{
     text-align: center;
-    align-content: center;
-    
+    align-content: center;    
     height 250px;
 }
 
@@ -269,54 +188,71 @@ button{
     font-size: 20px;
 }
 
-
-
-
-
-
-
-
-
-/*====================*/
-/*     VIDEO PAGE     */
-/*====================*/
-
-
-
-
-#vidTable{
-    width: 100%;
-    
-}
-
-.vidCells{
-    width: 100;
-    height:300px;
-}
-
-.vids{
-    width: 100%;
-    height: 300px;
+textarea{
+    width: 200px;
 }
 
 
 
-
-
-
-
-
-
-
-
-/*FOOTER*/
+/*================*/
+/*     Footer     */
+/*================*/
 
 footer{
-    
-    clear: both;
-    text-align:center;
-     background-color: transparent;
-    font-size: 30px;
-    margin-top: inherit;
+    font-size: 25px;
+    text-align: center;
 }
+
+
+
+
+
+
+
+
+/*=======================*/
+/*     MOBILE STYLES     */
+/*=======================*/
+
+
+
+@media screen and (max-width: 600px) and (min-width: 0px){
+    
+    #logo{
+        display: none;
+        
+        padding-right: 0%;
+    }
+    
+   
+    .navwords{
+       font-size: 12px;
+    }
+    
+    .navbuttons{
+        width: 100%;
+        margin-right:20%;
+    }
+    
+    
+
+    .navbar{
+        width: 100%;  
+        margin: 0 auto;
+        height: 60px;
+    }
+
+    footer{
+        font-size: 12px;
+    }
+    
+    textarea{
+        width: 200px;    
+    }
+    
+}
+
+
+
+
 
