--- a/homeStylesheet.css
+++ b/homeStylesheet.css
@@ -1,57 +1,3 @@
-/*=======================*/
-/*     MOBILE STYLES     */
-/*=======================*/
-
-
-
-
-
-@media screen and (max-width: 600px) and (min-width: 0px){
-    
-    #logo{
-        display: none;
-        
-        padding-right: 0%;
-    }
-    
-    #ejs{
-        display: none;
-        
-    }
-    
-    .navwords{
-       font-size: 12px;
-    }
-    
-    .navbuttons{
-        width: 100%;
-        margin-right:20%;
-    }
-    
-    
-
-    .navbar{
-        width: 100%;  
-        margin: 0 auto;
-        height: 60px;
-    }
-
-    .vidcells{
-        width: 100%;
-        float: left;
-        
-    }
-    .vids{
-        width: 100%;
-        float: left;
-    }
-    
-    .socialmedia{
-        width: 0%;
-    }
-    
-    
-}
 
 
 
@@ -76,6 +22,7 @@ body{
     box-sizing:border-box;    
     font-family: 'Abel', sans-serif;
     background-color: black;
+    display: none;
 }
 
 
@@ -89,6 +36,9 @@ body{
 /*============================*/
 
 
+#logo1{
+    display: none;
+}
 
 
 .navwrap{
@@ -104,35 +54,6 @@ body{
     margin-top: -15px;
     padding-right: 4%;  
 }
-
-#ejs{
-    float:left;
-    font-size: 30px;
-   
-    display:inline-block;
-}
-
-#home{
-    
-}
-
-#bio{
-    
-}
-
-#audio{
-    
-}
-
-#video{
-    
-}
-
-#contact{
-    
-}
-
-
 
 .navbar{
     margin-top:30px;
@@ -183,10 +104,6 @@ a:hover{
     font-size: 17px;
 }
 
-#yt{
-    width:50px;
-    height: 50px;
-}
 
 
 
@@ -211,7 +128,7 @@ a:hover{
 #name{
     position: absolute;
     text-align: center;
-    font-size: 40px;
+    font-size: 50px;
     opacity: 0.9;
     margin-left: 60%;
 }
@@ -245,131 +162,69 @@ a:hover{
 
 
 
-/*====================*/
-/*     EMAIL FORM     */
-/*====================*/
-
-
-
-
-
-#emailForm{
-    text-align: center;
-    align-content: center;
-    width 150px;
-    height 250px;
-}
-
-button{
-    
-    background-color: silver; 
-    border-radius: 10%;
-    height: 30px;
-    width: 60px;
-}
-
-#messagebox{
-   
-}
-
-#emailFormHeader{ 
-    text-align: center;
-    font-size: 20px;
-}
-
-
-
-
-
-
-
-
-/*====================*/
-/*     VIDEO PAGE     */
-/*====================*/
-
-
-
-#vidTable{
-    width: 100%;
-}
-
-.vidCells{
-    width: 100;
-    height:300px;
-}
-
-.vids{
-    width: 100%;
-    height: 300px;
-}
-
-
 
 
 
 
 
 /*=======================*/
-/*     ABOUT ARTICLE     */
+/*     MOBILE STYLES     */
 /*=======================*/
 
 
 
-.aboutParagraphs{
-    line-height: 23px;
-    text-align: justify;
-}
 
-#p1{
-    width: 90%;
-    float: left;
+
+@media screen and (max-width: 600px) and (min-width: 0px){
     
-    padding-left: 5%;
-    padding-right: 5%;
-}
+    
+    /*============================*/
+    /*       NAVBAR SECTION       */
+    /*============================*/
+    
+    .navwrap{
+        margin-top: 10px;
+    }
+    
+    #logo{
+        display: none;
+    }
+    
+    #ejs{
+        display: none;
+        
+    }
+    
+    .navwords{
+       font-size: 12px;
+    }
+    
+    .navbuttons{
+        
+        margin-right:20%;
+    }
+    
+    
 
-#ejsElectricBass{
-    width: 40%;
-    float: left;
-    clear: left;
-    padding: 0 5% 0 5%;
+    .navbar{
+        width: 100%;  
+        margin: 0 auto;
+        height: 60px;
+    }
+    
+  
+    
+    
+    
+    
+    
+    /*=====================*/
+    /*     MAIN SECTION    */
+    /*=====================*/
+    
+    #name{
+        font-size: 25px;
+    }
     
 }
-
-#p2{
-    width: 40%;
-    float: left;
-    padding: 0 5% 0 5%;
-}
-
-#ejsBrokenString{
-    width: 40%;    
-    padding: 22px 5% 0 5%;
-    
-}
-
-#p3{
-    width: 40%;
-    padding: 0 5% 0 5%;
-    float: left;
-    margin-top: -200px;
-}
-
-#ejsUpright{
-    float: left;
-    padding-left: 5%;
-    width: 40%;
-    
-}
-#p4{
-    padding-left: 5%;
-    padding-right: 5%;
-    display: block;
-    width: 40%;
-    overflow: hidden;   
-    float: right;
-}
-
-
 
