--- a/homeStylesheet.css
+++ b/homeStylesheet.css
@@ -81,7 +81,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#db010101', e
     display: inline-block;
     float: left;
     text-align: center;
-    width: 12.5%;
+    width: 9.125%;
     font-size: 14px;  
     
 }
@@ -92,7 +92,7 @@ a{
 }
 
 a:hover{
-    color: #bababa;
+    color: #407ccc;
 }
 
 .socialmedia{
@@ -132,28 +132,45 @@ a:hover{
 #name{
     position: absolute;
     text-align: center;
-    font-size: 50px;
+    font-size: 70px;
     opacity: 0.9;
-    margin-left: 62%;
+    margin-left: 18%;
 }
     
-#upright{
-    width: 100%;
+#portrait{
+    max-width: 100%;
+    max-height: 100%;
+    width: 40%;
     height: auto;
+    margin-left: 60%;
 }
 
 
 #blurb{
     text-align: justify;
     position: absolute;
-    margin-left: 65%;
+    margin-left: 20%;
     width: 25%;
     height: auto;
+    margin-top: 16%;
+    font-size: 20px;
+}
+
+h2{
+    position: absolute;
     margin-top: 10%;
+    margin-left: 21%;
+    font-size: 30px;
+    opacity: 0.9;
+    font-style: italic;
 }
 
 
-
+#contactInfo{
+    text-align: center;
+    font-size: 20px;
+    
+}
 
 
 
