--- a/contactStylesheet.css
+++ b/contactStylesheet.css
@@ -34,6 +34,8 @@ body{
 /*============================*/
 
 
+
+
 .navwrap{
     height: 100px;
     background-color: black;
@@ -41,12 +43,14 @@ body{
 }
 
 #logo{
-    height: 100px;
     float:left;
+    height: 100px;
     width:6%;
     margin-top: -15px;
     padding-right: 4%;  
 }
+
+
 
 
 .navbar{
@@ -71,17 +75,18 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#db010101', e
     display: inline-block;
     float: left;
     text-align: center;
-    width: 12.5%;
-    font-size: 14px;    
+    width: 9.125%;
+    font-size: 14px;  
+    
 }
 
 a{
-    color: white;
+    color: #568aff;
     text-decoration: none;
 }
 
 a:hover{
-    color: #bababa;
+    color: #407ccc;
 }
 
 .socialmedia{
@@ -151,6 +156,19 @@ a:hover{
 }
 
 
+#contactInfo{
+    text-align: center;
+    font-size: 20px;
+     /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#010101+2,4e4e4e+52,0a0a0a+99&0.86+0,1+100 */
+background: -moz-linear-gradient(top, rgba(1,1,1,0.86) 0%, rgba(1,1,1,0.86) 2%, rgba(78,78,78,0.93) 52%, rgba(10,10,10,1) 99%, rgba(10,10,10,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(1,1,1,0.86)), color-stop(2%,rgba(1,1,1,0.86)), color-stop(52%,rgba(78,78,78,0.93)), color-stop(99%,rgba(10,10,10,1)), color-stop(100%,rgba(10,10,10,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top, rgba(1,1,1,0.86) 0%,rgba(1,1,1,0.86) 2%,rgba(78,78,78,0.93) 52%,rgba(10,10,10,1) 99%,rgba(10,10,10,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top, rgba(1,1,1,0.86) 0%,rgba(1,1,1,0.86) 2%,rgba(78,78,78,0.93) 52%,rgba(10,10,10,1) 99%,rgba(10,10,10,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top, rgba(1,1,1,0.86) 0%,rgba(1,1,1,0.86) 2%,rgba(78,78,78,0.93) 52%,rgba(10,10,10,1) 99%,rgba(10,10,10,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom, rgba(1,1,1,0.86) 0%,rgba(1,1,1,0.86) 2%,rgba(78,78,78,0.93) 52%,rgba(10,10,10,1) 99%,rgba(10,10,10,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#db010101', endColorstr='#0a0a0a',GradientType=0 ); /* IE6-9 */
+    clear: both;
+}
 
 
 
@@ -189,17 +207,6 @@ button{
 
 textarea{
     width: 40%;
-}
-
-
-
-/*================*/
-/*     Footer     */
-/*================*/
-
-footer{
-    font-size: 25px;
-    text-align: center;
 }
 
 
