--- a/ejsStylesheet.css
+++ b/ejsStylesheet.css
@@ -80,7 +80,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#db010101', e
 }
 
 a{
-    color: white;
+    color: #568aff;
     text-decoration: none;
 }
 
@@ -129,6 +129,13 @@ a:hover{
     
 }
 
+.subHeaders{
+    text-align: center;
+    margin: auto;
+    clear: both;
+    padding-top: 100px;
+}
+
 #name{
     position: absolute;
     text-align: center;
@@ -148,7 +155,7 @@ a:hover{
     margin-left: 15%;
     margin-right: 15%;
     
-    height:1870px;
+    height:1950px;
 }
 
 
@@ -163,6 +170,7 @@ background: -o-linear-gradient(top, rgba(1,1,1,0.86) 0%,rgba(1,1,1,0.86) 2%,rgba
 background: -ms-linear-gradient(top, rgba(1,1,1,0.86) 0%,rgba(1,1,1,0.86) 2%,rgba(78,78,78,0.93) 52%,rgba(10,10,10,1) 99%,rgba(10,10,10,1) 100%); /* IE10+ */
 background: linear-gradient(to bottom, rgba(1,1,1,0.86) 0%,rgba(1,1,1,0.86) 2%,rgba(78,78,78,0.93) 52%,rgba(10,10,10,1) 99%,rgba(10,10,10,1) 100%); /* W3C */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#db010101', endColorstr='#0a0a0a',GradientType=0 ); /* IE6-9 */
+    clear: both;
 }
 
 
@@ -215,10 +223,7 @@ ul{
     height: 300px;
 }
 
-.subHeaders{
-    text-align: center;
-    margin: auto;
-}
+
 
 .kennedyCenter{
     padding-right: 5%;
@@ -265,16 +270,43 @@ ul{
 
 
 .gallery{
-    width: 80%;
-    max-width: 100%;
     
+    max-width: 100%;
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 20px;
+    height: auto;
+    float: left;
     
 }
 
+.portraitGallery{
+    width: 30%;
+    height: auto;
+    margin-left: 13.33%;
+    margin-top: 20px;
+    float: left;
+    max-width: 100%;
+    max-height: 100%;
+}
 
-td{
-    height: 300px;
-    width: 33.33%;
+#lastPortrait{
+    clear: both;
+}
+
+#secondLandscape{clear: both;}
+
+
+.clearPics{
+    clear: left;
+    max-width: 100%;
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 20px;
+    height: auto;
+    float: left;
 }
 
 
@@ -298,11 +330,8 @@ td{
 }
 
 #whiteHouse{
-    width: 40%;
-    float: right;
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-top: -430px;
+    width: 100%;
+    max-width: 100%;    
     overflow: hidden;
 }
 
@@ -326,13 +355,8 @@ td{
 }
 
 #p4{
-    width: 50%;
+    width: 100%;
     
-}
-
-#p4Break{
-    display: block;
-    width: 200%;
 }
 
 #p5{
@@ -344,7 +368,9 @@ td{
 
 
 
-
+cite{
+    clear: both;
+}
 
 
 
@@ -434,6 +460,9 @@ td{
     
     #header{
         font-size: 15px;
+    }
+    .subHeaders{
+        padding-top: 10px;
     }
     
     
