--- a/homeStylesheet.css
+++ b/homeStylesheet.css
@@ -87,7 +87,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#db010101', e
 }
 
 a{
-    color: white;
+    color: #568aff;
     text-decoration: none;
 }
 
